--- a/packages/network-canvas/lib/stylesheets/main.scss
+++ b/packages/network-canvas/lib/stylesheets/main.scss
@@ -4,3 +4,8 @@ $blue: #0275d8;
 .upvoted .upvote-button {
   background-color: $light-blue;
 }
+
+.users-account-menu .dropdown-menu {
+  left: initial;
+  right: 0;
+}
