--- a/packages/networkcanvas-styles/lib/stylesheets/main.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/main.scss
@@ -4,7 +4,7 @@
 @import "./spinner";
 @import "./global";
 
-@import '{}/node_modules/bootstrap/scss/bootstrap.scss';
+@import '{}/node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
 @import "./accounts";
 @import "./categories";
@@ -49,11 +49,6 @@ code{
 
 .upvoted .upvote-button {
   background-color: $light-blue;
-}
-
-.users-account-menu .dropdown-menu {
-  left: initial;
-  right: 0;
 }
 
 .posts-day h2{
