--- a/packages/networkcanvas-styles/lib/stylesheets/_variables.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/_variables.scss
@@ -1,15 +1,44 @@
 $hmargin: 10px;
 $vmargin: 15px;
 
-$smaller-font: 0.8rem;
-$small-font: 0.9rem;
-$medium-font: 1rem;
-$large-font: 1.25rem;
-$larger-font: 1.35rem;
+//== Typography
+//
+//## Font, line-height, and color for body text, headings, and more.
+
+$font-family-base:       "Quicksand", "Raleway", "Lucida Grande", Helvetica, sans-serif;
+
+$font-size-base:          14px !default;
+$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+
+$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5:            $font-size-base !default;
+$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
+
+//** Unit-less `line-height` for use in components like buttons.
+$line-height-base:        1.428571429 !default; // 20/14
+//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
+$line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
+
+//** By default, this inherits from the `<body>`.
+$headings-font-family:    inherit !default;
+$headings-font-weight:    500 !default;
+$headings-line-height:    1.1 !default;
+$headings-color:          inherit !default;
+
+//
+
+$smaller-font: $font-size-small;
+$small-font: $font-size-small;
+$medium-font: $font-size-base;
+$large-font: $font-size-large;
+$larger-font: $font-size-h3;
 
 $border: 1px solid $light-border;
 
-$font-family-base:       "Quicksand", "Raleway", "Lucida Grande", Helvetica, sans-serif;
 $spacer:   3rem;
 $line-height-base: 1.6;
 
