--- a/packages/networkcanvas-styles/lib/stylesheets/_accounts.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/_accounts.scss
@@ -5,7 +5,23 @@
 }
 
 .accounts-ui{
+  padding: $vmargin;
+  min-width: 240px;
+
+  .field{
+    margin-bottom: $vmargin/2;
+  }
+
   .buttons{
+    .btn{
+      display: block;
+      width: 100%;
+      text-align: center;
+      margin-bottom: $vmargin;
+      &:last-child{
+        margin-bottom: 0;
+      }
+    }
     a{
       display:block;
       text-align: center;
