--- a/packages/networkcanvas-styles/lib/stylesheets/_accounts.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/_accounts.scss
@@ -17,9 +17,9 @@
       width: 100%;
       text-align: center;
       margin-bottom: $vmargin;
-      &:last-child{
-        margin-bottom: 0;
-      }
+      // &:last-child{
+      //   margin-bottom: 0;
+      // }
     }
     a{
       display:block;
