--- a/packages/networkcanvas-styles/lib/stylesheets/_users.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/_users.scss
@@ -1,3 +1,15 @@
+.avatar{
+  height: 20px;
+  width: 20px;
+  display: block;
+  a, span, img{
+    display: block;
+    border-radius: 100%;
+    height: 100%;
+    widows: 100%;
+  }
+}
+
 .avatar-initials{
   background: $lightest-border;
   color: $medium-text;
