--- a/packages/networkcanvas-styles/lib/stylesheets/main.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/main.scss
@@ -23,6 +23,10 @@ code {
   padding: 3px 6px;
 }
 
+blockquote {
+  font-size: inherit;   // Override bootstrap
+}
+
 .sr-only{
   display: none;
 }
