--- a/packages/vulcan-email-templates/lib/server/emails/posts/newPost.handlebars
+++ b/packages/vulcan-email-templates/lib/server/emails/posts/newPost.handlebars
@@ -1,11 +1,5 @@
 <span class="heading">
-<a href="{{profileUrl}}">{{postAuthorName}}</a>
-has created a new post:
-{{#if url}}
-  <a href="{{linkUrl}}" class="action-link">{{postTitle}}</a>
-{{else}}
-  {{postTitle}}
-{{/if}}
+{{postAuthorName}}</a> has created a new post: {{postTitle}}
 </span><br><br>
 
 {{#if htmlBody}}
