--- a/packages/vulcan-email-templates/lib/server/emails/comments/newReply.handlebars
+++ b/packages/vulcan-email-templates/lib/server/emails/comments/newReply.handlebars
@@ -1,5 +1,5 @@
-<span class="heading"><a href="{{profileUrl}}">{{authorName}}</a>
-has replied to your comment on
+<span class="heading">
+{{authorName}} has replied to your comment on
 <a href="{{postUrl}}" class="action-link">{{postTitle}}</a>:
 </span>
 <br/><br/>
