Bold import of old packages...

--- a/packages/networkcanvas-styles/lib/stylesheets/main.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/main.scss
@@ -4,7 +4,7 @@
 @import "./spinner";
 @import "./global";
 
-@import '{}/node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+//@import 'node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
 @import "./accounts";
 @import "./categories";
