--- a/packages/networkcanvas-styles/lib/stylesheets/main.scss
+++ b/packages/networkcanvas-styles/lib/stylesheets/main.scss
@@ -1,10 +1,13 @@
+//@import "_bootstrap.scss";
+
+
 @import "./breakpoints";
 @import "./colors";
 @import "./variables";
 @import "./spinner";
 @import "./global";
 
-//@import 'node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+@import '{}/node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
 @import "./accounts";
 @import "./categories";
@@ -23,10 +26,7 @@ code {
   padding: 3px 6px;
 }
 
-blockquote {
-  font-size: inherit;   // Override bootstrap
-}
 
 .sr-only{
-  display: none;
+  //display: none;
 }
